# huaweicloud-mcp-server

./: .env  .env.example  .gitignore  =3.1.100  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  _live_ces_test.py  _live_elb_test.py  _live_obs_test.py  manifest.yaml  pyproject.toml  start.ps1  start.sh
.claude/: settings.local.json
codearts-pipeline-mcp-server/: .env.example  README.md  TEST_REPORT.md  claude_desktop_config.example.json  pyproject.toml
codearts-pipeline-mcp-server/scripts/: run-with-env.sh
codearts-pipeline-mcp-server/src/pipeline_mcp_server/: __init__.py  client.py  config.py  definition_utils.py  errors.py  logging_setup.py  models.py  serializers.py  server.py
codearts-pipeline-mcp-server/src/pipeline_mcp_server/tools/: __init__.py  execution.py  lifecycle.py  query.py  update.py
codearts-pipeline-mcp-server/tests/: conftest.py  probe_real_backend.py  smoke_stdio.py  test_config_and_logging.py  test_definition_utils.py  test_query_tools.py  test_run_and_lifecycle.py  test_update_info_merge_logic.py
cts-mcp-server/: .env.example  README.md  TEST_REPORT.md  claude_desktop_config.example.json  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh.md  CONFIGURATION.md  CONFIGURATION.zh.md  DEPLOY.md  DEPLOY.zh.md  (+4 more)
ecs-mcp-server/: .env.example  README.md  TEST_REPORT.md  pyproject.toml
ecs-mcp-server/scripts/: run-sse-local.sh  run-with-env.sh
ecs-mcp-server/src/ecs_mcp_server/: __init__.py  app.py  client.py  config.py  errors.py  logging_setup.py  models.py  serializers.py  server.py
ecs-mcp-server/src/ecs_mcp_server/tools/: job.py  lifecycle.py  query.py
ecs-mcp-server/tests/: conftest.py  smoke_sse.py  smoke_stdio.py  test_config.py  test_job.py  test_lifecycle.py  test_query.py
huaweicloud-mcp-server/: =3.1.100  README.en.md  README.md  pyproject.toml
huaweicloud-mcp-server/scripts/: run-with-env.sh
huaweicloud-mcp-server/src/huaweicloud_mcp/: __init__.py  app.py  client.py  config.py  errors.py  logging_setup.py  server.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/cce/: __init__.py  make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/cce/tools/: __init__.py  job.py  query.py  update.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/ces/: __init__.py  _time.py  make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/ces/tools/: __init__.py  alarm.py  event.py  metric.py  resource_group.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/cts/: make_tools.py  mask_utils.py  models.py  serializers.py  time_utils.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/cts/tools/: detail.py  search.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/ecs/: make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/ecs/tools/: job.py  lifecycle.py  query.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/elb/: __init__.py  make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/elb/tools/: audit.py  manage.py  query.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/lts/: __init__.py  make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/lts/tools/: __init__.py  alarm.py  discovery.py  search.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/obs/: make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/obs/tools/: audit.py  manage.py  query.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/pipeline/: client_helpers.py  definition_utils.py  make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/pipeline/tools/: execution.py  lifecycle.py  query.py  update.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/rds/: __init__.py  make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/rds/tools/: audit.py  logs.py  manage.py  metrics.py  query.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/vpc/: make_tools.py  models.py  serializers.py
huaweicloud-mcp-server/src/huaweicloud_mcp/services/vpc/tools/: eip.py  flow_log.py  manage.py  network.py  query.py  route.py
huaweicloud-mcp-server/tests/: conftest.py  test_cce_job.py  test_cce_query.py  test_cce_server_registration.py  test_cce_update.py  test_ces_tools.py  test_config.py  test_cts_detail.py  test_cts_mask_utils.py  test_cts_pagination.py  test_cts_search.py  test_cts_seven_day.py  test_cts_time_utils.py  test_ecs_job.py  test_ecs_lifecycle.py  test_ecs_query.py  test_elb_tools.py  test_lts_alarm.py  test_lts_discovery.py  test_lts_search.py  test_lts_server_registration.py  test_obs_tools.py  test_pipeline_config.py  test_pipeline_definition_utils.py  test_pipeline_lifecycle.py  test_pipeline_query.py  test_pipeline_update.py  test_rds_tools.py  test_tool_filtering.py  test_vpc_eip.py  test_vpc_flow_log.py  test_vpc_manage.py  test_vpc_network.py  test_vpc_query.py  test_vpc_route.py  test_vpc_server_registration.py  test_wrap_tool_auth_error.py
mcp-auth-common/: README.md  pyproject.toml
mcp-auth-common/src/mcp_auth_common/: __init__.py  errors.py  identity.py  scope.py  strategy.py
mcp-gateway/: .env.example  DELIVERY_NOTES.md  README.md  TEST_REPORT.md  pyproject.toml
mcp-gateway/deploy/: mcp-gateway.service  nginx.conf.example
mcp-gateway/scripts/: start.ps1  start.sh
mcp-gateway/src/mcp_gateway/: __init__.py  auth_middleware.py  cli.py  gateway.py  logfmt.py  manifest_loader.py  preview.py  token.py
mcp-gateway/src/mcp_gateway/auth/: __init__.py  errors.py  identity.py  middleware.py  strategy.py
mcp-gateway/tests/: test_auth_middleware.py  test_auth_strategy_gateway.py  test_auth_strategy_standalone.py  test_combined_lifespan.py  test_dev_mode.py  test_factory_mode.py  test_jwt_sub_required.py  test_logfmt.py  test_manifest_override_priority.py  test_mount_path_endpoint_prefix.py  test_preview.py  test_sse_no_double_prefix.py  test_token_cli.py  test_tool_authorization.py
(+25 files in other folders)
