[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huaweicloud-mcp-server"
version = "0.1.0"
description = "Unified Huawei Cloud MCP Server — ECS, CodeArts Pipeline, and CTS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Huawei Cloud MCP Team" },
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "huaweicloudsdkcore>=3.1.100",
    "huaweicloudsdkecs>=3.1.100",
    "huaweicloudsdkcodeartspipeline>=3.1.100",
    "huaweicloudsdkcts>=3.1.100",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
    "starlette>=0.37",
    "mcp-auth-common",
]

[project.scripts]
huaweicloud-mcp-server = "huaweicloud_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/huaweicloud_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.uv.sources]
mcp-auth-common = { workspace = true }
