[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-auth-common"
version = "0.1.0"
description = "Shared AuthStrategy + Identity model used by every Huawei Cloud MCP server and the gateway."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MCP Gateway Maintainers" }]

dependencies = [
    "pydantic>=2.6",
    "pyjwt[crypto]>=2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auth_common"]
