[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "ASGI gateway that mounts multiple Huawei Cloud FastMCP servers on one uvicorn port with JWT auth + path RBAC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MCP Gateway Maintainers" }]

dependencies = [
    "mcp[cli]>=1.2.0",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.6",
    "mcp-auth-common",
    # The three MCP servers are workspace-internal dependencies. When using
    # `uv`, they resolve via [tool.uv.sources] below. When using plain pip,
    # install them separately (pip install -e ./ecs-mcp-server ...) before
    # installing the gateway — importlib.import_module() finds them on sys.path.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "cryptography>=42.0",
]
token = [
    "cryptography>=42.0",
]

[project.scripts]
mcp-gateway = "mcp_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
mcp-auth-common = { workspace = true }
ecs-mcp-server = { workspace = true }
codearts-pipeline-mcp-server = { workspace = true }
huaweicloud-cts-mcp-server = { workspace = true }
